tests/machine/x/hs/dataset_sort_take_limit.error

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:36: error:
    Data constructor not in scope: VString :: String -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                    ^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:67: error:
    Data constructor not in scope: VInt :: t9 -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                   ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:105: error:
    Data constructor not in scope: VString :: String -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                         ^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:140: error:
    Data constructor not in scope: VInt :: t8 -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                            ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:177: error:
    Data constructor not in scope: VString :: String -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                 ^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:208: error:
    Data constructor not in scope: VInt :: t7 -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:245: error:
    Data constructor not in scope: VString :: String -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                     ^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:277: error:
    Data constructor not in scope: VInt :: t6 -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                                                     ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:314: error:
    Data constructor not in scope: VString :: String -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                                                                                          ^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:347: error:
    Data constructor not in scope: VInt :: t5 -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                                                                                                                           ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:384: error:
    Data constructor not in scope: VString :: String -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                                                                                                                                                                ^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:414: error:
    Data constructor not in scope: VInt :: t4 -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                                                                                                                                                                                              ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:450: error:
    Data constructor not in scope: VString :: String -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:105:485: error:
    Data constructor not in scope: VInt :: t3 -> a
    |
105 | products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:107:13: error:
    • Couldn't match expected type: t10
                                    -> ((a3 -> b0) -> [a3] -> [b0])
                                    -> ((a4, b1) -> b1)
                                    -> [(b2, Map.Map String b2)]
                                    -> t
                  with actual type: [a6]
    • The function ‘take’ is applied to six value arguments,
        but its type ‘Int -> [a6] -> [a6]’ has only two
      In the expression:
        take
          3 drop 1 map snd
          (List.sortOn
             fst
             [((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
                p <- products])
      In an equation for ‘expensive’:
          expensive
            = take
                3 drop 1 map snd
                (List.sortOn
                   fst
                   [((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
                      p <- products])
    • Relevant bindings include
        expensive :: t
          (bound at /workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:107:1)
    |
107 | expensive = take 3 drop 1 map snd (List.sortOn fst [((-fromMaybe (error "missing") (Map.lookup "price" (p))), p) | p <- products])
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:107:20: error:
    • Couldn't match expected type: [a6]
                  with actual type: Int -> [a5] -> [a5]
    • Probable cause: ‘drop’ is applied to too few arguments
      In the second argument of ‘take’, namely ‘drop’
      In the expression:
        take
          3 drop 1 map snd
          (List.sortOn
             fst
             [((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
                p <- products])
      In an equation for ‘expensive’:
          expensive
            = take
                3 drop 1 map snd
                (List.sortOn
                   fst
                   [((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
                      p <- products])
    |
107 | expensive = take 3 drop 1 map snd (List.sortOn fst [((-fromMaybe (error "missing") (Map.lookup "price" (p))), p) | p <- products])
    |                    ^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:112:38: error:
    • Couldn't match expected type: t0 -> Maybe a0 -> String
                  with actual type: [Char]
    • The function ‘show’ is applied to three value arguments,
        but its type ‘(a1 -> Maybe a1 -> a1) -> [Char]’ has only one
      In the expression:
        show fromMaybe (error "missing") (Map.lookup "name" item)
      In the first argument of ‘unwords’, namely
        ‘[show fromMaybe (error "missing") (Map.lookup "name" item),
          "costs $",
          show fromMaybe (error "missing") (Map.lookup "price" item)]’
    • Relevant bindings include
        item :: Map.Map String a0
          (bound at /workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:112:11)
    |
112 |   mapM_ (\item -> putStrLn (unwords [show fromMaybe (error "missing") (Map.lookup "name" item), "costs $", show fromMaybe (error "missing") (Map.lookup "price" item)])) expensive
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:112:108: error:
    • Couldn't match expected type: t1 -> Maybe a0 -> String
                  with actual type: [Char]
    • The function ‘show’ is applied to three value arguments,
        but its type ‘(a2 -> Maybe a2 -> a2) -> [Char]’ has only one
      In the expression:
        show fromMaybe (error "missing") (Map.lookup "price" item)
      In the first argument of ‘unwords’, namely
        ‘[show fromMaybe (error "missing") (Map.lookup "name" item),
          "costs $",
          show fromMaybe (error "missing") (Map.lookup "price" item)]’
    • Relevant bindings include
        item :: Map.Map String a0
          (bound at /workspace/mochi/tests/machine/x/hs/dataset_sort_take_limit.hs:112:11)
    |
112 |   mapM_ (\item -> putStrLn (unwords [show fromMaybe (error "missing") (Map.lookup "name" item), "costs $", show fromMaybe (error "missing") (Map.lookup "price" item)])) expensive
    |                                                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Context around line 105:
  103|            in map row (drop start ls)
  104| 
  105| products = [Map.fromList [("name", VString ("Laptop")), ("price", VInt (1500))], Map.fromList [("name", VString ("Smartphone")), ("price", VInt (900))], Map.fromList [("name", VString ("Tablet")), ("price", VInt (600))], Map.fromList [("name", VString ("Monitor")), ("price", VInt (300))], Map.fromList [("name", VString ("Keyboard")), ("price", VInt (100))], Map.fromList [("name", VString ("Mouse")), ("price", VInt (50))], Map.fromList [("name", VString ("Headphones")), ("price", VInt (200))]]
  106| 
  107| expensive = take 3 drop 1 map snd (List.sortOn fst [((-fromMaybe (error "missing") (Map.lookup "price" (p))), p) | p <- products])
